--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,103 +1,47 @@
-/* main{
-    width: 100vw;
-    height: 100vh;
-    padding: 0;
-} */
- section{
-    width: 100%;
-    display: flex;
 
- }
-.login{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 50vw;
-    height: 100vh;
-    align-items: center;
-    background: #00155c;
-    /* margin: 10px; */
-    /* box-shadow: 0px 10px 10px  #333; */
-
+*{
+  /* border: red .5px solid; */
 }
-@media (min-width:420px) {
-    .login{width: 100vw;}
-    .side{
-        width: 0;
-    }
-}
-.login header{
-    padding: 10px;
-    width: 100%;
-    /* justify-content: center; */
-    /* text-align: center; */
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0px 0px 20px 0px;
-    background: #000;
-}
-.login header h1{
-    font-family: cursive !important;
-    font-weight: 900;
+   .login{
+   height: 100%; 
+   width: 100%;
+  }
+  
+/*
+  .login .container .btn-sam, .container-xxl .btn-sam{
+    background: var(--sam)  !important;
+  }
+  .login .container .bg-sam, .container-xxl .bg-sam{
+    background: var(--sam)  !important;
+  } */
+   .login .big-head{
     font-size: 50px;
-    color: #ffffff;
-    /* text-transform: uppercase; */
-}
-.login header p{
-    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
-    font-family: sofia;
-    font-weight: 500;
-    color: #ffffff;
-    text-transform: uppercase;
-}
-.login .bottom{
-    border-radius: 10px;
-    /* width: 100%; */
-    
-}
-.login .bottom h1{
-    text-transform: capitalize;
-    font-family: sofia;
-    font-weight: 800;
-    font-size: 30px;
-    text-align: center;
-    margin: 30px 0px;
-}
-.login .bottom input{
-    width: 300px;
-    height: 40px;
-    padding: 10px;
-    display: flex;
-    font-size: 15px;
-    font-family: sans-serif;
+   } 
+   .login .header{
+    width:  100%;
     margin: auto;
-    border: none;
-    border-radius: 100px;
-    margin-bottom: 30px;
-
-    box-shadow: 2px 2px 5px 1px rgba(90, 90, 90, 0.425);
-}
-.login .bottom button{
-    background: var(--primary);
-    width: 300px;
-    /* height: 40px; */
-    color: #fff;
-    font-family: sans-serif;
-    padding: 10px 0px;
-    border: none;
-    border-radius: 10px;
-    font-weight: 900;
-    font-size: 20px;
-}
-.login .bottom p{
-    font-family: sofia;
-    text-transform: capitalize;
-    text-align: center;
-    padding: 10px;
+   }
+   .login .header p{
+    font-family: codec;
     font-size: 15px;
-    /* color: blue; */
-    display: block;
+   }
+   .login input{
+    font-family: codec;
+   }.login .btn-grad{
+    font-family: codec;
+   }
+@media (min-width:500px) {
+    .login{
+        /* border: 1px solid #333; */
+        box-shadow: 0px 3px 45px rgba(0, 0, 0, 0.5);
+        /* border-radius: 15px; */
+        overflow: hidden;
+        height: fit-content;
+    }
+    .login .header{
+        display: none !important;
+    }
+    .login h1{
+      
+    }
 }
