--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
   font-family: primaryfont;
   src: url(./assets/OpenSans.ttf);
 }
+@font-face {
+  font-family: brandname;
+  src: url(./assets/BlackberryJamPersonalUse-rXOB.ttf);
+}
 *{
   padding: 0px;
   margin: 0;
@@ -25,6 +29,10 @@
   font-family: primaryfont !important;
   /* border: 1px solid red; */
   transition: .3s;
+}
+.mainpage{
+  position: relative;
+  min-height:100vh
 }
 h1,h2,h3,h4,h5,h6{
     font-family: 'Nunito',sans-serif !important;
@@ -49,8 +57,9 @@ input{
   font-weight: 600;
 }
 .bg-background{
-  background: #eee;
+  background: #fff !important;
 }
+
 .container .text-sam, .container-xxl .text-sam{
   color: var(--sam3)  !important;
 }
