--- a/src/components/admin/admin.css
+++ b/src/components/admin/admin.css
@@ -28,6 +28,10 @@
     position: sticky;
     /* display: none; */
 }
+.admin .sidenav h1{
+    font-weight: 500  !important;
+    font-size: 40px;
+}
 .admin .sidenav li{
     list-style: none;
     padding: 10px;
@@ -35,12 +39,31 @@
     margin: 10px 0px;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: 800;
+    font-size: 25px;
 }
 .admin .activebg{
-    border: 1px solid #fff !important;
-    color: #fff;
-    background: var(--primary);
-    background: #ff6600d7;
+    /* border: 2px solid blue !important; */
+    color: var(--primary);
+    font-weight: 800;
+    font-size: 30px;
+    background: rgba(255, 102, 0, 0.2);
+}
+.admin .sidenav #closebn{
+    width: 100%;
+    position: absolute;
+    bottom: 40px;
+    margin: 0;
+    /* background: red; */
+    left: 0;
+    display: flex;
+    justify-content: center;
+
+}
+.admin .sidenav .closebn{
+    background: rgba(255, 102, 0, 0.6);
+    border-radius: 100px;
+    padding: 10px;
 }
 .admin .bg-menu{
     background-color: #e0e0e0 !important;
