--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -16,6 +16,7 @@
   } */
    .login .big-head{
     font-size: 50px;
+    font-family: salad !important;
    } 
    .login .header{
     width:  100%;
